[package]
name = "bench-cow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
ioctls = "0.6.2"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread", "signal", "time", "sync", "net", "io-util"] }

[build-dependencies]
bindgen = "0.69.4"
